--- a/public/index.html
+++ b/public/index.html
@@ -71,76 +71,6 @@ button{
 
 <audio id="sound" src="https://assets.mixkit.co/sfx/preview/mixkit-message-pop-alert-2354.mp3"></audio>
 
-<script>
-const socket = io();
-let time = 900;
-let typingTimer;
-
-function join(){
-  socket.emit("join",{
-    username:username.value.trim(),
-    room:room.value.trim()
-  });
-}
-
-socket.on("error",msg=>{
-  error.innerText = msg;
-});
-
-socket.on("history",msgs=>{
-  login.style.display="none";
-  chat.style.display="block";
-  msgs.forEach(addMsg);
-  setInterval(()=>{
-    time--;
-    timer.innerText=`⏳ ${Math.floor(time/60)}:${time%60}`;
-  },1000);
-});
-
-function send(){
-  if(text.value.trim()){
-    socket.emit("message",text.value);
-    text.value="";
-    socket.emit("stopTyping");
-  }
-}
-
-function typingFn(){
-  socket.emit("typing");
-  clearTimeout(typingTimer);
-  typingTimer=setTimeout(()=>{
-    socket.emit("stopTyping");
-  },1000);
-}
-
-socket.on("message",msg=>{
-  addMsg(msg);
-  sound.play();
-});
-
-socket.on("system",msg=>{
-  messages.innerHTML+=`<div class="system">${msg}</div>`;
-});
-
-socket.on("typing",user=>{
-  typing.innerText=`${user} در حال تایپ...`;
-});
-
-socket.on("stopTyping",()=>{
-  typing.innerText="";
-});
-
-socket.on("timeup",()=>{
-  alert("⛔ زمان چت تموم شد");
-  location.reload();
-});
-
-function addMsg(m){
-  messages.innerHTML+=
-    `<div class="msg"><b>${m.user}</b>: ${m.text} <small>${m.time}</small></div>`;
-  messages.scrollTop=messages.scrollHeight;
-}
-</script>
-
+<script src="app.js"></script>
 </body>
 </html>
